# can_bus_network

./: CMakeLists.txt  README.md  package.xml
launch/: can_nodes.launch
msg/: camera_gimbal.msg  motor_arm.msg  sensor_gps.msg  sensor_imu.msg
msg/canrx/: sensors_accelerometer.msg  sensors_gps.msg  sensors_imu.msg
msg/cantx/: motors_drive2.msg
scripts/can_bus_scripts/: can_bus_ids.py  can_node_0_rx.py  can_node_0_tx.py  can_node_1_rx.py  can_node_rx.py  can_node_tx.py
scripts/sim/: .run_can.swp  .start_can.swp  can_bus_send.py  listen_can.py  motor_talker.py  run_can
